Fix spacing for current time setter button in rtl layout

--- a/src/app.scss
+++ b/src/app.scss
@@ -23,6 +23,11 @@
         }
       }
     }
+
+    .me-2 {
+      margin-right: 0 !important;
+      margin-left: 0.5rem !important;
+    }
   }
 }
 
